--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: #fff;
   color: #434455;
+  width: auto;
 }
 
 ul {
@@ -37,15 +38,16 @@ button {
 }
 
 .container {
-  max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
+  max-width: 320px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .section-title {
@@ -61,6 +63,7 @@ button {
 /* Header */
 
 .header-page {
+  width: 100%;
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
@@ -71,6 +74,8 @@ button {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .page-navigation {
@@ -93,8 +98,8 @@ button {
   color: #2e2f42;
 }
 
-.header-link-list {
-  display: flex;
+.menu {
+  display: none;
   gap: 40px;
 }
 
@@ -130,8 +135,27 @@ button {
   border-radius: 2px;
 }
 
+.mobile-menu-button-container {
+  display: block;
+}
+
+.mobile-menu-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  width: 24px;
+  height: 24px;
+}
+
+.mobile-menu-button-icon {
+  fill: #2f2f37;
+}
+
 .contacts {
-  font-style: normal;
+  display: none;
 }
 
 .header-contact-list {
@@ -155,7 +179,7 @@ button {
 /* Section 1 hero image */
 
 .hero-image {
-  max-width: 1440px;
+  max-width: 320px;
   background-color: #2e2f42;
   background-image: linear-gradient(
       to bottom,
@@ -167,21 +191,21 @@ button {
   background-position: center;
   background-size: cover;
   margin: auto;
-  padding: 188px 0;
+  padding-top: 112px;
+  padding-bottom: 112px;
 }
 
 .hero-image-title {
   color: #ffffff;
-  font-size: 56px;
+  font-size: 36px;
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
-  width: 496px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 48px;
-  max-width: 496px;
+  margin-bottom: 72px;
+  max-width: 216px;
 }
 .button-order {
   color: #fff;
@@ -222,7 +246,7 @@ button {
 }
 
 .benefits-icon-conteiner {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   height: 112px;
@@ -235,22 +259,28 @@ button {
 
 .benefits-list {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 72px;
 }
 
 .benefits-item {
-  width: calc((100% - 3 * 24px) / 4);
+  width: 100%;
+  min-width: 288px;
 }
 
 .benefits-title {
   color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  text-align: center;
 }
 .benefits-text {
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -261,10 +291,13 @@ button {
 }
 .our-team-title {
   margin-bottom: 72px;
+  text-align: center;
 }
 .personnel-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 72px;
 }
 .personnel-list-item {
   background-color: #ffffff;
@@ -340,12 +373,11 @@ button {
 }
 
 .card-portfolio {
-  display: flex;
-  flex-direction: column;
-  width: 360px;
-  padding-bottom: 0px;
-  align-items: flex-start;
-  flex-shrink: 0;
+  min-width: 288px;
+  width: 100%;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -381,7 +413,6 @@ button {
 }
 
 .card-portfolio-content {
-  width: 360px;
   padding: 32px 16px 32px 16px;
   border-right: 1px solid var(--cornflower, #e7e9fc);
   border-bottom: 1px solid var(--cornflower, #e7e9fc);
@@ -410,11 +441,14 @@ button {
 
 .footer-page .container {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
 }
 
 .footer-logo-box {
-  margin-right: 120px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 72px;
+  gap: 16px;
 }
 
 .footer-logo {
@@ -427,7 +461,7 @@ button {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   display: inline-block;
-  margin-bottom: 16px;
+  text-align: center;
 }
 .footer-logo .addition {
   color: #f4f4fd;
@@ -436,11 +470,16 @@ button {
   color: #f4f4fd;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  max-width: 264px;
+  max-width: 100%;
 }
 
 .footer-social-media {
-  margin-right: 80px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 72px;
 }
 
 .footer-title {
@@ -448,12 +487,12 @@ button {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-bottom: 16px;
+  text-align: center;
 }
 
 .footer-social-links-list {
   display: flex;
-  gap: 16px;
+  column-gap: 16px;
 }
 
 .footer-link:hover,
@@ -461,8 +500,15 @@ button {
   background-color: #31d0aa;
 }
 
+.subscribe {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+}
+
 .subscribe-form {
   display: flex;
+  flex-direction: column;
   gap: 24px;
 }
 
@@ -470,7 +516,8 @@ button {
 }
 
 .form-mail {
-  width: 264px;
+  max-width: 365px;
+  min-width: 288px;
   height: 40px;
   color: #ffffff;
   background-color: transparent;
@@ -503,6 +550,8 @@ button {
   border: none;
   border-radius: 4px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .subscribe-button:hover,
@@ -526,12 +575,16 @@ button {
   z-index: 99998;
   background-color: rgba(46, 47, 66, 0.4);
   visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.is-open {
+.modal-backdrop.is-open {
   visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .modal-window {
@@ -711,4 +764,99 @@ button {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
+}
+
+/* Mobile heder menu */
+
+.modal-window-mobile-menu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999998;
+  background-color: rgba(46, 47, 66, 0.4);
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-window-mobile-menu.is-open {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.form-mobile-menu {
+  position: absolute;
+  width: 320px;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fcfcfc;
+  padding: 72px 16px 40px 16px;
+}
+
+.menu-button {
+  background-color: transparent;
+}
+
+.modal-menu-container {
+}
+
+.modal-menu {
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
+  margin-bottom: 168px;
+}
+
+.modal-header-link-item {
+}
+
+.modal-header-link {
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+
+.modal-current-page {
+  color: #404bbf;
+}
+
+.modal-contacts {
+}
+
+.modal-header-contact-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  margin-bottom: 48px;
+}
+
+.modal-contacts-link {
+  font-style: normal;
+  color: #434455;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.modal-phone {
+  color: #4d5ae5;
+}
+
+.modal-social-links-list {
+  display: flex;
+  column-gap: 40px;
+}
+
+.modal-social-link {
 }
