--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,6 @@
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-right: 76px;
 }
 
 .header-logo .addition {
@@ -340,6 +339,9 @@
   overflow: hidden;
 }
 
+.img-box img {
+}
+
 .overlay {
   background-color: #4d5ae5;
   color: #f4f4fd;
@@ -372,13 +374,6 @@
   flex-direction: column;
 }
 
-.footer-logo-box {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 72px;
-  gap: 16px;
-}
-
 .footer-logo {
   color: #4d5ae5;
   font-family: 'Raleway', sans-serif;
@@ -404,6 +399,8 @@
 .container-social-media {
   display: flex;
   flex-direction: column;
+  margin-bottom: 72px;
+  row-gap: 72px;
 }
 
 .footer-social-media {
@@ -412,7 +409,12 @@
   row-gap: 16px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 72px;
+}
+
+.footer-logo-box {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .footer-title {
@@ -512,7 +514,7 @@
 .modal-window {
   position: absolute;
   width: calc(100% - 30px);
-  height: 100%;
+  min-height: 623px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -702,6 +704,7 @@
   z-index: 999998;
   display: flex;
   flex-direction: column;
+  padding: 0 16px;
   background-color: #fff;
   visibility: hidden;
   opacity: 0;
@@ -718,16 +721,22 @@
 
 .form-mobile-menu {
   position: absolute;
-  display: flex;
-  flex-direction: column;
   width: calc(100% - 30px);
   max-width: 288px;
   height: 100%;
   top: 50%;
   left: 50%;
+  display: flex;
+  flex-direction: column;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  padding: 72px 16px 40px 16px;
+  padding-top: 72px;
+  padding-bottom: 40px;
+}
+
+.mobile-menu-header {
+  display: flex;
+  flex-direction: row;
 }
 
 .menu-button {
@@ -738,7 +747,6 @@
   display: flex;
   flex-direction: column;
   row-gap: 40px;
-  margin-bottom: 168px;
 }
 
 .modal-header-link {
@@ -858,7 +866,10 @@
   }
 
   .footer-page .container {
-    padding-left: 120px;
+    max-width: 498px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
   }
 
   .container-social-media {
@@ -892,7 +903,7 @@
 
   .modal-window {
     width: 408px;
-    height: 584px;
+    min-height: 584px;
   }
 }
 
@@ -949,11 +960,12 @@
 
   .benefits-title {
     font-size: 20px;
+    font-weight: 500;
     line-height: 1.2;
   }
 
   .benefits-text {
-    font-weight: 500;
+    font-weight: 400;
   }
 
   .personnel-list {
@@ -984,6 +996,11 @@
     flex-direction: row;
     column-gap: 80px;
     padding: 0 16px;
+    max-width: none;
+  }
+
+  .container-social-media {
+    margin-bottom: 0;
   }
 
   .footer-social-media {
